Add demo selector and bindings for components

--- a/src/app/feature/containers/demo-container/demo-container.component.html
+++ b/src/app/feature/containers/demo-container/demo-container.component.html
@@ -1,5 +1,4 @@
-<p>
-  demo-container works!
-</p>
+<app-demo [demoValue]="demoValue$ | async"
+          (dispatchClick)="onDispatch($event)"
+></app-demo>
 
-<button (click)="dispatch()">dispatch</button>
